The second commit, before chapter 9, which was not done in chapter 7